# QDCS

./: .gitignore  bun.lockb  package.json  svelte.config.js
src/: app.css
src-tauri/: .gitignore  Cargo.toml  configs.json  data.duckdb  filter.docx  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/functions/: check_duplicate.rs  cosine_calculate.rs  embedding.rs  mod.rs  plot_similarity.rs
src-tauri/src/middleware/: check_duplicate_answers.rs  fill_format.rs  mod.rs
src-tauri/src/services/: check_duplicate.rs  exportdocx.rs  mod.rs  querydb.rs
src/components/: resultsPage.svelte
src/routes/: +page.svelte
src/routes/check/: +page.svelte
