[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
anyhow = "1.0.95"
docx-rust = "0.1.9"
duckdb = { version = "1.1.1", features = ["bundled"] }
fastembed = "4.4.0"
hard-xml = "1.36.0"
once_cell = "1.17.2"
simsimd = "6.3.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0", features = ["fs-all", "os-all", "path-all"] }
serde_json = "1.0.137"
lazy_static = "1.5.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[[bin]]
name = "querydb"
path = "src/services/querydb.rs"
